fixed jumping page

--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,4 +1,5 @@
 
+
 .picturecarousel {
     display:flex;
     flex-wrap: wrap;
@@ -259,6 +260,12 @@
 @media screen and (max-width: 805px) {
 
     
+    
+    .reposition{
+        position: relative;
+        height: 17svh;
+        width: 100%;
+    }
 
     .btn{
         padding: 15px 50px;
